--- a/.github/workflows/cachix.yml
+++ b/.github/workflows/cachix.yml
@@ -3,19 +3,32 @@ on:
   push:
 jobs:
   update-cachix:
+
     name: Update Cachix
     runs-on: macos-latest
+
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v1
+
+    - name: Checkout repository
+      uses: actions/checkout@v2
+      with:
+          # Nix Flakes doesn't work on shallow clones
+          fetch-depth: 0
+
     - name: Install Nix
-      uses: cachix/install-nix-action@v6
+      uses: cachix/install-nix-action@v12
+      with:
+        install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20210126_f15f0b8/install
+        extra_nix_config: |
+          experimental-features = nix-command flakes
+          access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+
     - name: Setup Cachix
-      uses: cachix/cachix-action@v3
+      uses: cachix/cachix-action@v8
       with:
         name: malo
-        signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
-        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-        skipNixBuild: true
-    - name: Build and Update Cachix
-      run: nix-build shell.nix
+        signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
+
+    - name: Build Nix shell
+      run: |
+        nix develop .
